# enterprise-search

./: Makefile  README.md  build.sh  config.mk.template  sloccount.sh  stopstart.pl
Modules/: Crawler.pm  SDSharepointDeserializer.pm  UserSystem.pm
Modules/Boitho/: .Infoquery.pm.swp  Infoquery.pm  InitServices.pm  LicenseAuth.pm  Lot.pm  NetConfig.pm  PhoneHome.pm  RaidStatus.pm  Scan.pm  SettingsExport.pm  WebFile.pm  YumWrapper.pm
Modules/CGI/: State.pm
Modules/SD/: Df.pm  Entropysoft.pm  ISO639.pm  Lot.pm  LotInfo.pm  SLicense.pm  SimpleLog.pm
blackbox/: bb.rsyslog.conf  bbdemo.boitho.com.conf  boithobb.sql  boithodbsetup  creatuser.sql  filepermissions_fix.sh  limitsTuning.sh  pakker.txt  start.sh
cgi-bin/webadmin/: .htaccess  add.cgi  apiinfo.cgi  authentication.cgi  blackbox_admin.session  blackbox_admin.webprj  clienttpl.cgi  config.pm  connector.cgi  download.cgi  file.cgi  graphs.cgi  help.cgi  login.cgi  logs.cgi  rest.cgi  (+10 more)
config/: attribute_descriptions.conf  bb-phone-home-client.conf  crawlmanager.conf  dispatcher.cfg  dispatcher.conf  dispatcher.confNEW  file_extensions.conf  filetypes.eng.conf  filetypes.nbo.conf  lotlist.conf  main.cfg  main.conf  maplist.conf  searchd.conf  show_attributes.conf
data/: StemeOversikt.ENG  StemeOversikt.NBO  stemwords.ENG  stemwords.NBO
doc/: MANIFEST.txt
es/: boitho-public-htaccess-0.1.0-1.i386.rpm  ks.cfg  searchdaimon.repo
fileFilter/catdoc/src/catdoc-0.94.2/: .cvsignore  CODING.STD  CREDITS  INSTALL  INSTALL.dos  Makefile  Makefile.in  NEWS  README  TODO  acconfig.h  config.cache  config.status  configure  configure.in  mkinstalldirs
fileFilter/catdoc/src/catdoc-0.94.2/charsets/: Makefile
fileFilter/catdoc/src/catdoc-0.94.2/compat/: langinfo.c  langinfo.h  strftime.c  strftime.h  unistd.h
fileFilter/catdoc/src/catdoc-0.94.2/doc/: .cvsignore  Makefile  Makefile.in  catdoc.1  catdoc.1.in  catppt.1  catppt.1.in  wordview.1  wordview.1.in  xls2csv.1  xls2csv.1.in
fileFilter/catdoc/src/catdoc-0.94.2/src/: .cvsignore  Makefile  Makefile.in  analyze.c  catdoc  catdoc.c  catdoc.h  catdoc.rsp  catppt  catppt.c  charsets.c  config.h  config.h.in  confutil.c  fileutil.c  makefile.tc  numutils.c  ole.c  ole.h  ppt.h  pptparse.c  ppttypes.h  reader.c  rtfread.c  sheet.c  substmap.c  wordview  wordview.tcl  writer.c  xls.h  xls2csv  xls2csv.c  xlsparse.c  xltypes.h
init.d/: README.boitho  bbAutoUpdate  boitho-bbdn  boithoad  boithodbsetup  crawlManager  crawl_watch  everrun  functions  phonehome  sd-searchd  searchdbb  start.sh  stop.sh  suggest
kickstart/: README  boot.msg  dhcpd.conf  ks-rhel5.1.cfg  ks.cfg  splash.lss  syslinux.cfg
logs/: NOTEMPTY
meta/: boitho.sql  testqueries.txt
mk/: cc.mk  lib.mk  objdir.mk  prog.mk  setup.mk
perl/: IR.pm  IndexerLot.pl  IndexerLotAnchors.pl  IndexerLotUrl.pl  InvertetIndexMaker.pl  LinguaIdent.pm  LotInvertetIndexMaker.pl  LotInvertetIndexMakerOLD.pl  MySQLDcConnect.pm  RobotRules.pm  ShowTopRank.pl  StringPop.pm  WashAddUrlSplit.pl  WashAddUrlTXTFile.pl  aaass.pm  addUdfile.pl  addUdfileNEW.pl  attack.pl  attack_push.pl  attack_suggest_oem.pl  bbAutoUpdate.pl  cleanDB_File.pl  cleanLots.pl  cleandc.pl  common.pm  commonDemon.pm  commonRobotstxt.pm  countHttpResponsCodes.pl  crawl_watch.pl  createaspellwordlist.pl  decodebbsetingsbackup.pl  dmoz_laster.pl  filterDictionaryForSpelling.pl  filterUdfile.pl  htmlParser.pm  http-conf-write.pl  iindex.OLD2pl  iindex.pm  iindexOLD.pm  inject.pl  (+49 more)
public_html/: .htaccess  index.html  infopage.html  noaccess.html
rpms/: Makefile  boitho-apaceconf.spec  boitho-base.spec  boitho-daemonize.spec  boitho-dummy.spec  boitho-local-network.spec  boitho-meta.spec  boitho-phonehome.spec  boitho-sdesuser.spec  boitho-syslogconf.spec  boitho_mod_auth.spec  defult.spec  mod_auth_boitho.spec  rpmmagic.pl  tlcd-gt14.spec
script/: eachNight.sh  enable-root-login.sh  log_rotation_script  makebbwordlist.sh  reloadDictionary.sh  setup-dev-environment.sh  setup-dev-github.sh  start.sh  stop.sh
sql/: update-cur.sql
torrents/: Searchdaimon_ES_2.2_wmvare.torrent  Searchdaimon_ES_2.3_plane.torrent  Searchdaimon_ES_2.3_vbox.torrent  Searchdaimon_ES_2.6_VMware.torrent  Searchdaimon_ES_2.6_plain.torrent  Searchdaimon_ES_2.7_VMware.torrent  Searchdaimon_ES_2.7_plain.torrent  Searchdaimon_ES_2.8_vbox.torrent
virtualbox/: VBoxLinuxAdditions-amd64.run  install.sh
vmware/: INSTALL  Makefile  Searchdaimon ES.vmx  fix_and_install.sh  make_issue.sh  run_setup.c
yum/: info.txt  yumBoithoOnly.conf
(+1314 files in other folders)
